[uv sync still works] move sources declarations to root

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,7 @@
 [tool.uv.workspace]
 members = ["packages/*"]
+
+[tool.uv.sources]
+albatross = { workspace = true }
+bird-feeder = { workspace = true }
+seeds = { workspace = true }
