--- a/packages/bird-feeder/pyproject.toml
+++ b/packages/bird-feeder/pyproject.toml
@@ -4,6 +4,13 @@ version = "1.0.0"
 requires-python = ">=3.12"
 dependencies = ["anyio>=4.3.0,<5", "seeds"]
 
+[tool.uv.sources]
+seeds = { index = "testindex" }
+
+[[tool.uv.index]]
+name = "testindex"
+url = "https://download.pytorch.org/whl/cpu"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
